# libbpg

./: .gitignore  Makefile  Makefile.am  README.dependencies  configure  configure.ac  install.md
debian/: changelog  control
html/: bpgdec.html  bpgdec8.html
libavcodec/: cabac_functions.h  hevcpred_template.c  internal.h  utils.c
libavutil/: atomic.h  common.h  internal.h  intmath.h  libm.h  mem.c  timer.h
man/templates/: bpgmux.1.footer  bpgmux.1.header.in  bpgview.1.footer
source/: Makefile-original  Makefile.am  bpgdec.c  bpgenc.c  bpgenc.h  bpgmux.c  bpgview.c  ffmpeg-config.h  jctvc_glue.cpp  libbpg.c  libbpg.map  tmalloc.c
source/jctvc/TLibCommon/: CommonDef.h
source/jctvc/TLibEncoder/: TEncCavlc.cpp
source/libavcodec/: hevc.c  hevc.h  hevc_cabac.c  hevc_refs.c  mathops.h
source/libavutil/: common.h  float_dsp.h  frame.c  opencl.h
